# scienco

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
docs/: api_reference.md  distribution.md  index.md
scienco/: __init__.py  metrics.py  types.py  utils.py
scienco/indexes/: __init__.py  constants.py  english.py  processing.py  russian.py
scienco/metrics/: __init__.py  constants.py  processing.py
tests/: test_indexes.py  test_metrics.py  test_utils.py
