[metadata]
license_files = LICENSE

[bdist_wheel]
universal = true

[sdist]
formats = gztar, xztar, zip

[tool:pytest]
testpaths = tests

[coverage:run]
branch = true
source = scienco

[coverage:report]
precision = 2

[isort]
combine_as_imports = true
combine_star = true
line_length = 125
multi_line_output = 2
