[metadata]
license_files = LICENSE

[bdist_wheel]
universal = true

[tool:pytest]
addopts = --exitfirst --quiet
minversion = 6.0
testpaths = tests

[coverage:run]
branch = true
source = scienco

[coverage:report]
precision = 2
skip_empty = true

[coverage:html]
directory = public

[isort]
combine_as_imports = true
force_single_line = true
multi_line_output = 7
